--- a/FlaskWebProject2/templates/index.html
+++ b/FlaskWebProject2/templates/index.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
-    <link href="http://cdn.pydata.org/bokeh/release/bokeh-0.9.0.min.css"
+    <link href="http://cdn.pydata.org/bokeh/release/bokeh-0.10.0.min.css"
           rel="stylesheet" type="text/css">
-    <script src="http://cdn.pydata.org/bokeh/release/bokeh-0.9.0.min.js"></script>
+    <script src="http://cdn.pydata.org/bokeh/release/bokeh-0.10.0.min.js"></script>
 
 </head>
 <body>
     <h1>Hello Bokeh!</h1>
 
-    <p> Below is a simple plot</p>
+    <p> Below is a simple plot1111</p>
 
     {{ script|safe }}
 
