--- a/FlaskWebProject2/templates/index.html
+++ b/FlaskWebProject2/templates/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
-    <link href="http://cdn.pydata.org/bokeh/release/bokeh-0.10.0.min.css"
-          rel="stylesheet" type="text/css">
+    <link href="http://cdn.pydata.org/bokeh/release/bokeh-0.10.0.min.css" rel="stylesheet" type="text/css">
     <script src="http://cdn.pydata.org/bokeh/release/bokeh-0.10.0.min.js"></script>
 
 </head>
